<resources>
    <string name="app_name">NewsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_politics">Politics</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_send">Send</string>
    <string name="title">Title</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="textview">TextView</string>
    <string name="share">SHARE</string>
    <string name="click_below_to_view_source">Click below to view Source</string>
</resources>
