<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_sports_soccer_24px"
            android:title="@string/menu_sports" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_landmark_solid"
            android:title="@string/menu_politics" />
    </group>

    <item android:title="Tools">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/btn_star_big_on"
                android:title="@string/menu_bookmark" />
        </menu>
    </item>

</menu>
